# agent-interrogator

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  SRD_Addendum_AgentProfile_Fuzzing.md  TODO.md  agent-interrogator-cli.py  agent-interrogator-todo.md  agent_fuzzer_cli_addon.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: publish.yml  test.yml
examples/: callbacks.py  callbacks_HuggingFace_MCP_example.py
src/agent_interrogator/: __init__.py  config.py  fuzzing_module.py  interrogator.py  llm.py  llm.py.bak  models.py  output.py  payloads.py  prompt_templates.py
tests/: __init__.py  test_callbacks.py  test_config.py  test_interrogator.py  test_models.py  test_output_modes.py
